--- a/public/stylesheets/slider1.css
+++ b/public/stylesheets/slider1.css
@@ -72,7 +72,7 @@
 .nav-arrows span {
 	position: absolute;
 	z-index: 2000;
-	top: 50%;
+	top: 95%;
 	width: 40px;
 	height: 40px;
 	border: 8px solid #ddd;
@@ -94,13 +94,13 @@
 
 .nav-arrows span.nav-arrow-prev {
 	left: 5%;
-	border-right: none;
+	border-right: 0px;
 	border-top: none;
 }
 
 .nav-arrows span.nav-arrow-next {
 	right: 5%;
-	border-left: none;
+	border-left: 0px;
 	border-bottom: none;
 }
 
@@ -199,7 +199,7 @@
 .demo-1 .sl-slide h2 {
 	color: #000;
 	text-shadow: 0 0 1px #000;
-	padding: 20px;
+	padding: 10px;
 	position: absolute;
 	font-size: 34px;
 	font-weight: 700;
@@ -210,7 +210,7 @@
 	text-align: center;
 	line-height: 50px;
 	bottom: 50%;
-	margin: 0 0 -120px 0;
+	margin: 0 0 -80px 0;
 }
 
 .demo-1 .sl-slide blockquote {
@@ -225,11 +225,12 @@
 	color: #8b8b8b;
 	z-index: 2;
 	bottom: 50%;
-	margin: 0 0 -200px 0;
+	margin: 0 0 -140px 0;
 	padding: 0;
 }
 
 .demo-1 .sl-slide blockquote p{
+	font-size: 40px;
 	margin: 0 auto;
 	width: 60%;
 	max-width: 400px;
@@ -252,7 +253,7 @@
 }
 
 .demo-1 .sl-slide blockquote cite {
-	font-size: 10px;
+	font-size: 12px;
 	padding-top: 10px;
 	display: inline-block;
 	font-style: normal;
