--- a/public/stylesheets/slider1.css
+++ b/public/stylesheets/slider1.css
@@ -18,8 +18,8 @@
 	position: relative;
 }
 
-.demo-2 .sl-slider h2,
-.demo-2 .sl-slider blockquote {
+.demo-2 .sl-slide h2,
+.demo-2 .sl-slide blockquote {
 	padding: 100px 30px 10px 30px;
 	width: 80%;
 	max-width: 960px;
@@ -29,19 +29,27 @@
 	z-index: 100;
 }
 
-.demo-2 .sl-slider h2 {
+.demo-2 .sl-slide h2 {
 	font-size: 100px;
 	text-shadow: 0 -1px 0 rgba(0,0,0,0.2);
 }
 
-.demo-2 .sl-slider blockquote {
+.demo-2 .sl-slide blockquote {
 	font-size: 28px;
-	padding-top: 10px;
+	padding-top: 0px;
 	font-weight: 300;
 	text-shadow: 0 -1px 0 rgba(0,0,0,0.2);
 }
 
-.demo-2 .sl-slider blockquote cite {
+.demo-2 .sl-slide blockquote p{
+	font-size: 30px;
+	margin-top :40px;
+	width: 60%;
+	max-width: 400px;
+	position: relative;
+}
+
+.demo-2 .sl-slide blockquote cite {
 	font-size: 16px;
 	font-weight: 700;
 	font-style: normal;
@@ -152,6 +160,17 @@
 		0 1px 1px rgba(255,255,255,0.4), 
 		inset 0 1px 1px rgba(0,0,0,0.1),
 		0 0 0 5px rgba(255,255,255,0.5);
+}
+
+.demo-2 .sl-slide .actions {
+	margin: 0px auto;
+	width: 80%;
+	max-width: 960px;
+	padding: 50px 30px 10px 30px;
+}
+
+demo-2 .sl-slide .actions .btn {
+	margin-right: 20px;
 }
 
 .nav-dots span.nav-dot-current:after {
@@ -443,6 +462,153 @@
 .demo-2 .bg-img-5 {
 	background-image: url(../images/5.jpg);
 }
+
+/* Custom background colors for slides in first demo */
+
+/* First Slide */
+.demo-2 .bg-1 .sl-slide-inner,
+.demo-2 .bg-1 .sl-content-slice {
+	background: #000;
+}
+
+/* Second Slide */
+.demo-2 .bg-2 .sl-slide-inner,
+.demo-2 .bg-2 .sl-content-slice {
+	background: #272B71;
+}
+
+.demo-2 .bg-2 [data-icon]:after,
+.demo-2 .bg-2 h2 {
+	color: #fff;
+}
+
+.demo-2 .bg-2 blockquote:before {
+	color: #222;
+}
+
+/* Third Slide */
+.demo-2 .bg-3 .sl-slide-inner,
+.demo-2 .bg-3 .sl-content-slice {
+	background: #db84ad;
+}
+
+.demo-2 .bg-3 .deco {
+	border-color: #fff;
+	border-color: rgba(255,255,255,0.5);
+}
+
+.demo-2 .bg-3 [data-icon]:after {
+	color: #fff;
+	text-shadow: 0 0 1px #fff;
+	box-shadow: inset 0 0 0 10px #b55381;
+}
+
+.demo-2 .bg-3 h2,
+.demo-2 .bg-3 blockquote{
+	color: #fff;
+	text-shadow: 0px 1px 1px rgba(0,0,0,0.3);
+}
+
+.demo-2 .bg-3 blockquote:before {
+	color: #c46c96;
+}
+
+/* Forth Slide */
+.demo-2 .bg-4 .sl-slide-inner,
+.demo-2 .bg-4 .sl-content-slice {
+	background: #5bc2ce;
+}
+
+.demo-2 .bg-4 .deco {
+	border-color: #379eaa;
+}
+
+.demo-2 .bg-4 [data-icon]:after {
+	text-shadow: 0 0 1px #277d87;
+	color: #277d87;
+}
+
+.demo-2 .bg-4 h2,
+.demo-2 .bg-4 blockquote{
+	color: #fff;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
+}
+
+.demo-2 .bg-4 blockquote:before {
+	color: #379eaa;
+}
+
+/* Fifth Slide */
+.demo-2 .bg-5 .sl-slide-inner,
+.demo-2 .bg-5 .sl-content-slice {
+	background: #ffeb41;
+}
+
+.demo-2 .bg-5 .deco {
+	border-color: #ECD82C;
+}
+
+.demo-2 .bg-5 .deco:after {
+	color: #fff;
+	text-shadow: 0 0 1px #000;
+}
+
+.demo-2 .bg-5 h2,
+.demo-2 .bg-5 blockquote{
+	color: #fff;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
+}
+
+.demo-2 .bg-5 blockquote:before {
+	color: #ecd82c;
+}
+
+/* Sixth Slide */
+.demo-2 .bg-6 .sl-slide-inner,
+.demo-2 .bg-6 .sl-content-slice {
+	background: #485B95;
+}
+
+.demo-2 .bg-6 .deco {
+	border-color: #3e4867;
+}
+
+.demo-2 .bg-6 .deco:after {
+	color: #fff;
+	text-shadow: 0 0 1px #000;
+}
+
+.demo-2 .bg-6 h2,
+.demo-2 .bg-6 blockquote{
+	color: #fff;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
+}
+
+/* Seventh Slide */
+.demo-2 .bg-7 .sl-slide-inner,
+.demo-2 .bg-7 .sl-content-slice {
+	background: #3D7F63;
+}
+
+.demo-2 .bg-7 .deco {
+	border-color: #455850;
+}
+
+.demo-2 .bg-7 .deco:after {
+	color: #fff;
+	text-shadow: 0 0 1px #000;
+}
+
+.demo-2 .bg-7 h2,
+.demo-2 .bg-7 blockquote{
+	color: #fff;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
+}
+
+.demo-2 .bg-7 blockquote:before {
+	color: #ecd82c;
+}
+
 
 /* Animations for content elements */
 
